@@ -13,7 +13,8 @@
  - Use Pango renderer by default, for better i18n.
  - Scroll 1/10 of a page with the mouse wheel (Soeren Sandmann).
  - Reimplemented -a, --no-auto argument.
- - 
+ - Made the Character chart window show the current page as selected
+   from the serverlist.
  - 
  - 
 
